--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -2,7 +2,7 @@ NAME= MyAwesomePhoneBook
 SRC= src/PhoneBook.cpp src/Contact.cpp src/main.cpp
 OBJS= $(SRC:.cpp=.o)
 CC= c++
-CFLAGS= -Wall -Wextra -Werror -std=c++98
+CFLAGS= -Wall -Wextra -Werror -std=c++98 -Iinclude
 RM= rm -f
 
 RESET = \033[0m
