phonebook encore a fix

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -13,7 +13,7 @@ CYAN = \033[36m
 RED = \033[31m
 MAGENTA = \033[35m
 
-TITLE= "\n$(MAGENTA)=====================================$(RESET)\n$(CYAN) CPP00/EX01  :  MY AWESOME PHONEBOOK       $(RESET)\n$(MAGENTA)=====================================$(RESET)\n"
+TITLE= "\n$(MAGENTA)=====================================$(RESET)\n$(CYAN) CPP00/EX01  :      PHONEBOOK          $(RESET)\n$(MAGENTA)=====================================$(RESET)\n"
 
 all: title $(NAME)
 
